// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds archer great items can destroy 28's 1`] = `
{
  "constitution": 5005,
  "dexterity": 262121,
  "intelligence": 5005,
  "luck": 12005,
  "strength": 5005,
  "willpower": 7764,
  "wisdom": 5005,
}
`;

exports[`builds archer normal items can kill level 5 mobs 1`] = `
{
  "constitution": 10,
  "dexterity": 152,
  "intelligence": 10,
  "luck": 17,
  "strength": 10,
  "willpower": 11,
  "wisdom": 10,
}
`;

exports[`builds archer trash items can kill level 1 mobs 1`] = `
{
  "constitution": 5,
  "dexterity": 5,
  "intelligence": 5,
  "luck": 5,
  "strength": 5,
  "willpower": 5,
  "wisdom": 5,
}
`;

exports[`builds archer uber items can deal destroy 32s at max level 1`] = `
{
  "constitution": 8008,
  "dexterity": 293893,
  "intelligence": 8008,
  "luck": 19208,
  "strength": 8008,
  "willpower": 24846,
  "wisdom": 16016,
}
`;

exports[`builds melee great items can destroy 28's 1`] = `
{
  "constitution": 7007,
  "dexterity": 87554,
  "intelligence": 7007,
  "luck": 8505,
  "strength": 169438,
  "willpower": 13044,
  "wisdom": 7007,
}
`;

exports[`builds melee normal items can kill level 5 mobs 1`] = `
{
  "constitution": 10,
  "dexterity": 60,
  "intelligence": 10,
  "luck": 14,
  "strength": 108,
  "willpower": 13,
  "wisdom": 10,
}
`;

exports[`builds melee trash items can kill level 1 mobs 1`] = `
{
  "constitution": 5,
  "dexterity": 7,
  "intelligence": 5,
  "luck": 5,
  "strength": 8,
  "willpower": 6,
  "wisdom": 5,
}
`;

exports[`builds melee uber items can deal destroy 32s at max level 1`] = `
{
  "constitution": 11512,
  "dexterity": 125077,
  "intelligence": 11512,
  "luck": 16160,
  "strength": 350978,
  "willpower": 21430,
  "wisdom": 11512,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 1`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 473749,
  "victimDamage": 0,
  "victimHeal": 473749,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 2`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 474130,
  "victimDamage": 192,
  "victimHeal": 473749,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 3`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 474712,
  "victimDamage": 585,
  "victimHeal": 473749,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 4`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 476119,
  "victimDamage": 1389,
  "victimHeal": 473749,
}
`;
